# skychain-notebook

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: commands.md  data_model.md
docs/motivation/: example.ipynb  manifesto.md
src/: cell.rs  main.rs  notebook.rs  page.rs
src/notebook/: cell.rs  chapter.rs  mod.rs  page.rs
src/notebook/cell/: cell.rs  mod.rs
src/notebook/cell/types/: mod.rs
src/notebook/cell_types/: mod.rs
