[package]
name = "skychain"
version = "0.1.0"
edition = "2024"
description = "A literate programming tool that makes it easy to interact, edit, visualize, and share code."

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.5"
typetag = "0.2.20"
uuid = { version = "1.18.0", features = ["serde", "v4"] }
